--- a/app/views/welcome/index.html.erb
+++ b/app/views/welcome/index.html.erb
@@ -101,32 +101,32 @@ Header
 
       <header class="section-header">
         <h3>About Us</h3>
-        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <p>Help organizations create new customer experiences, improve operational efficiencies and ensure IT delivers.</p>
       </header>
 
       <div class="row about-container">
 
         <div class="col-lg-6 content order-lg-1 order-2">
           <p>
-            Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+          Elite Soft is a startup for freelance full stack web development,.
           </p>
 
           <div class="icon-box wow fadeInUp">
             <div class="icon"><i class="fa fa-shopping-bag"></i></div>
-            <h4 class="title"><a href="">Eiusmod Tempor</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <h4 class="title"><a href="">Front End development</a></h4>
+            <p class="description">Front-end web development is the practice of converting data to a graphical interface, through the use of HTML, CSS, and JavaScript, so that users can view and interact with that data.</p>
           </div>
 
           <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
             <div class="icon"><i class="fa fa-photo"></i></div>
-            <h4 class="title"><a href="">Magni Dolores</a></h4>
-            <p class="description">Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p>
+            <h4 class="title"><a href="">Back End development</a></h4>
+            <p class="description">Back-end development is the skill that powers the web. Backend development languages handle the 'behind-the-scenes' functionality of web applications. It's code that connects the web to a database, manages user connections, and powers the web application itself.</p>
           </div>
 
           <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
             <div class="icon"><i class="fa fa-bar-chart"></i></div>
-            <h4 class="title"><a href="">Dolor Sitema</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            <h4 class="title"><a href="">DevOps</a></h4>
+            <p class="description">DevOps is a set of practices that combines software development and information-technology operations which aims to shorten the systems development life cycle and provide continuous delivery with high software quality.</p>
           </div>
 
         </div>
@@ -141,7 +141,7 @@ Header
           <%= image_tag ("img/about-extra-1.svg"), class: "img-fluid"%>
         </div>
         <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
-          <h4>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h4>
+          <h4>EXPERIENCE.</h4>
           <p>
             Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae perspiciatis occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at et a.
           </p>
@@ -157,12 +157,12 @@ Header
         </div>
 
         <div class="col-lg-6 wow fadeInUp pt-4 pt-lg-0 order-2 order-lg-1">
-          <h4>Neque saepe temporibus repellat ea ipsum et. Id vel et quia tempora facere reprehenderit.</h4>
+          <h4>PHILOSOPHY.</h4>
           <p>
-            Delectus alias ut incidunt delectus nam placeat in consequatur. Sed cupiditate quia ea quis. Voluptas nemo qui aut distinctio. Cumque fugit earum est quam officiis numquam. Ducimus corporis autem at blanditiis beatae incidunt sunt.
+          SARL FlamboSoft est une Société de Services et d’Ingénierie en Informatique, fondée en 2013. FLAMBOSOFT est Formé d’une équipe pluridisciplinaire.
           </p>
           <p>
-            Voluptas saepe natus quidem blanditiis. Non sunt impedit voluptas mollitia beatae. Qui esse molestias. Laudantium libero nisi vitae debitis. Dolorem cupiditate est perferendis iusto.
+          englobant une multitude de compétences dans les domaines de l’informatique, automatisme, sécurité numérique, et encore le marketing numérique.
           </p>
           <p>
             Eum quia in. Magni quas ipsum a. Quis ex voluptatem inventore sint quia modi. Numquam est aut fuga mollitia exercitationem nam accusantium provident quia.
@@ -182,7 +182,7 @@ Header
 
       <header class="section-header">
         <h3>Services</h3>
-        <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
+        <p>Helping business accelerate their journey to become cognitive enterprises.</p>
       </header>
 
       <div class="row">
@@ -191,14 +191,14 @@ Header
           <div class="box">
             <div class="icon"><i class="ion-ios-analytics-outline" style="color: #ff689b;"></i></div>
             <h4 class="title"><a href="">Web Application development</a></h4>
-            <p class="description">Voluptatum deleniti atque corrupti quos dolores et quas molestias excepturi sint occaecati cupiditate non provident</p>
+            <p class="description">Web application development is the creation of application programs that reside on remote servers and are delivered to the user's device over the Internet</p>
           </div>
         </div>
         <div class="col-md-6 col-lg-5 wow bounceInUp" data-wow-duration="1.4s">
           <div class="box">
             <div class="icon"><i class="ion-ios-bookmarks-outline" style="color: #e9bf06;"></i></div>
             <h4 class="title"><a href="">Custom Website Development</a></h4>
-            <p class="description">Minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat tarad limino ata</p>
+            <p class="description">Our web development team loves to be challenged and has vast experience building customized solutions and plugins to meet client needs</p>
           </div>
         </div>
 
@@ -228,7 +228,7 @@ Header
           <div class="box">
             <div class="icon"><i class="ion-ios-clock-outline" style="color: #4680ff;"></i></div>
             <h4 class="title"><a href="">Ecommerce Development</a></h4>
-            <p class="description">Et harum quidem rerum facilis est et expedita distinctio. Nam libero tempore, cum soluta nobis est eligendi</p>
+            <p class="description">Our dedicated ecommerce web developers experts can ensure that your site performs,have ecommerce features, offering scalability and integration solutions</p>
           </div>
         </div>
 
@@ -859,7 +859,7 @@ Header
 
   <div class="container">
     <div class="copyright">
-      &copy; Copyright <strong>Bouafia Khaled</strong>. All Rights Reserved
+      &copy; Copyright <strong>Elite Soft</strong>. All Rights Reserved
     </div>
     <div class="credits">
       <!--
