--- a/app/views/welcome/anglais.html.erb
+++ b/app/views/welcome/anglais.html.erb
@@ -52,7 +52,7 @@ Header
         </li>  -->
         <li><a href="#contact">Contact Us &emsp; |</a></li>
         
-        <li><a href="<%= welcome_francais_path %>">FR</a></li>
+        <li><a href="<%= francais_path %>">FR</a></li>
         <li><a href="#contact">ENG</a></li>
       </ul>
     </nav><!-- .main-nav -->
