--- a/app/views/welcome/francais.html.erb
+++ b/app/views/welcome/francais.html.erb
@@ -53,7 +53,7 @@ Header
         <li><a href="#contact">Nous contacter &emsp; |</a></li>
         
         <li><a href="#contact">FR</a></li>
-        <li><a href="<%= welcome_anglais_path %>">ENG</a></li>
+        <li><a href="<%= anglais_path %>">ENG</a></li>
       </ul>
     </nav><!-- .main-nav -->
 
@@ -92,8 +92,8 @@ Header
     <div class="container">
 
       <header class="section-header">
-        <h3>About Us</h3>
-        <p>Help organizations create new customer experiences, improve operational efficiencies and ensure IT delivers.</p>
+        <h3>À propos de nous</h3>
+        <p>Aidez les organisations à créer de nouvelles expériences client, à améliorer l'efficacité opérationnelle et à garantir que les services informatiques soient efficaces.</p>
       </header>
 
       <div class="row about-container">
