--- a/app/views/welcome/anglais.html.erb
+++ b/app/views/welcome/anglais.html.erb
@@ -91,14 +91,14 @@ Header
 
       <header class="section-header">
         <h3>About Us</h3>
-        <p>Help organizations create new customer experiences, improve operational efficiencies and ensure IT delivers.</p>
+        <p>Help Companies create new customer experiences, improve operational efficiencies and ensure IT delivers.</p>
       </header>
 
       <div class="row about-container">
 
         <div class="col-lg-6 content order-lg-1 order-2">
           <p>
-          Elite Soft is a startup for freelance full stack web development,.
+          Elite Soft is a company for freelance full stack web development and IT administration.
           </p>
 
           <div class="icon-box wow fadeInUp">
@@ -131,12 +131,12 @@ Header
           <%= image_tag ("img/about-extra-1.svg"), class: "img-fluid"%>
         </div>
         <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
-          <h4>EXPERIENCE.</h4>
+          <h4>EXPERIENCE</h4>
           <p>
-            Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae perspiciatis occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at et a.
+            Our team has several years of experience, several projects have been carried out including the development of web applications and administration of computer networks.
           </p>
           <p>
-            Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti. Odit qui asperiores ea corporis deserunt veritatis quidem expedita perferendis. Qui rerum eligendi ex doloribus quia sit. Porro rerum eum eum.
+           
           </p>
         </div>
       </div>
@@ -147,15 +147,13 @@ Header
         </div>
 
         <div class="col-lg-6 wow fadeInUp pt-4 pt-lg-0 order-2 order-lg-1">
-          <h4>PHILOSOPHY.</h4>
+          <h4>PRINCIPLE</h4>
           <p>
-          SARL FlamboSoft est une Société de Services et d’Ingénierie en Informatique, fondée en 2013. FLAMBOSOFT est Formé d’une équipe pluridisciplinaire.
+            Our principle as engineers is to inform you, offer you and guide you in the computerization or even the optimization of your systems.
           </p>
           <p>
-          englobant une multitude de compétences dans les domaines de l’informatique, automatisme, sécurité numérique, et encore le marketing numérique.
           </p>
           <p>
-            Eum quia in. Magni quas ipsum a. Quis ex voluptatem inventore sint quia modi. Numquam est aut fuga mollitia exercitationem nam accusantium provident quia.
           </p>
         </div>
 
@@ -273,7 +271,7 @@ Header
         </div>
 
       </div>
--->
+
       <div class="row counters">
 
         <div class="col-lg-3 col-6 text-center">
@@ -297,7 +295,7 @@ Header
         </div>
 
       </div>
-
+-->
     </div>
   </section>
 
