--- a/app/views/welcome/francais.html.erb
+++ b/app/views/welcome/francais.html.erb
@@ -93,32 +93,33 @@ Header
 
       <header class="section-header">
         <h3>À propos de nous</h3>
-        <p>Aidez les organisations à créer de nouvelles expériences client, à améliorer l'efficacité opérationnelle et à garantir que les services informatiques soient efficaces.</p>
+        <p>Aidez les entreprises à créer de nouvelles expériences client, à améliorer l'efficacité opérationnelle et à garantir que les services informatiques soient efficaces.</p>
       </header>
 
       <div class="row about-container">
 
         <div class="col-lg-6 content order-lg-1 order-2">
           <p>
-          Elite Soft is a startup for freelance full stack web development,.
+          Elite Soft est une entreprise freelance pour le développement web full stack et administration réseaux informatique.
           </p>
 
           <div class="icon-box wow fadeInUp">
             <div class="icon"><i class="fa fa-shopping-bag"></i></div>
             <h4 class="title"><a href="">Front End development</a></h4>
-            <p class="description">Front-end web development is the practice of converting data to a graphical interface, through the use of HTML, CSS, and JavaScript, so that users can view and interact with that data.</p>
+            <p class="description">
+             Le développement Web front-end consiste à convertir des données en une interface graphique, grâce à l'utilisation de HTML, CSS et JavaScript, afin que les utilisateurs puissent afficher et interagir avec ces données.</p>
           </div>
 
           <div class="icon-box wow fadeInUp" data-wow-delay="0.2s">
             <div class="icon"><i class="fa fa-photo"></i></div>
             <h4 class="title"><a href="">Back End development</a></h4>
-            <p class="description">Back-end development is the skill that powers the web. Backend development languages handle the 'behind-the-scenes' functionality of web applications. It's code that connects the web to a database, manages user connections, and powers the web application itself.</p>
+            <p class="description">Le développement back-end est la compétence qui alimente le Web. Les langages de développement backend gèrent la fonctionnalité «en arrière-plan» des applications Web. Il s'agit d'un code qui connecte le Web à une base de données, gère les connexions des utilisateurs et alimente l'application Web elle-même.</p>
           </div>
 
           <div class="icon-box wow fadeInUp" data-wow-delay="0.4s">
             <div class="icon"><i class="fa fa-bar-chart"></i></div>
             <h4 class="title"><a href="">DevOps</a></h4>
-            <p class="description">DevOps is a set of practices that combines software development and information-technology operations which aims to shorten the systems development life cycle and provide continuous delivery with high software quality.</p>
+            <p class="description">DevOps est un ensemble de pratiques qui combine le développement de logiciels et les opérations de technologie de l'information qui vise à raccourcir le cycle de vie du développement des systèmes et à fournir une livraison continue avec une haute qualité logicielle.</p>
           </div>
 
         </div>
@@ -133,12 +134,11 @@ Header
           <%= image_tag ("img/about-extra-1.svg"), class: "img-fluid"%>
         </div>
         <div class="col-lg-6 wow fadeInUp pt-5 pt-lg-0">
-          <h4>EXPERIENCE.</h4>
+          <h4>EXPERIENCE</h4>
           <p>
-            Ipsum in aspernatur ut possimus sint. Quia omnis est occaecati possimus ea. Quas molestiae perspiciatis occaecati qui rerum. Deleniti quod porro sed quisquam saepe. Numquam mollitia recusandae non ad at et a.
+            Notre équipe dispose de plusieurs années d’expérience, plusieurs projets ont été réalisés dont le développement d’applications web et administration de réseaux informatique.
           </p>
           <p>
-            Ad vitae recusandae odit possimus. Quaerat cum ipsum corrupti. Odit qui asperiores ea corporis deserunt veritatis quidem expedita perferendis. Qui rerum eligendi ex doloribus quia sit. Porro rerum eum eum.
           </p>
         </div>
       </div>
@@ -149,15 +149,14 @@ Header
         </div>
 
         <div class="col-lg-6 wow fadeInUp pt-4 pt-lg-0 order-2 order-lg-1">
-          <h4>PHILOSOPHY.</h4>
+          <h4>PRINCIPE</h4>
           <p>
-          SARL FlamboSoft est une Société de Services et d’Ingénierie en Informatique, fondée en 2013. FLAMBOSOFT est Formé d’une équipe pluridisciplinaire.
+          Notre principe en tant qu’ingénieurs est de vous informer, vous proposer et vous guider dans l’informatisation ou encore l’optimisation de vos systèmes.
           </p>
           <p>
-          englobant une multitude de compétences dans les domaines de l’informatique, automatisme, sécurité numérique, et encore le marketing numérique.
           </p>
           <p>
-            Eum quia in. Magni quas ipsum a. Quis ex voluptatem inventore sint quia modi. Numquam est aut fuga mollitia exercitationem nam accusantium provident quia.
+          
           </p>
         </div>
 
@@ -275,7 +274,7 @@ Header
         </div>
 
       </div>
--->
+
       <div class="row counters">
 
         <div class="col-lg-3 col-6 text-center">
@@ -299,7 +298,7 @@ Header
         </div>
 
       </div>
-
+-->
     </div>
   </section>
 
